--- a/1.html
+++ b/1.html
@@ -9,5 +9,7 @@
       Delay=1000 direction=up bgColor=#336699 height=150>
 <IMG height=150 src="a2.jpg" width=180>
 <IMG height=150 src="a2.jpg" width=180></MARQUEE>
+    <h1>ahdh</h1>
+    <h2>jdjdiid</h2>
 </body>
 </html>
